# octet2

./: CMakeLists.txt  LICENSE
src/: cell.cpp  cell.hpp  cell_set.cpp  cell_set.hpp  cell_set_polyhedron.cpp  cell_set_polyhedron.hpp  color.cpp  color.hpp  colored_cell_set.hpp  colored_cell_set_polyhedron.cpp  colored_cell_set_polyhedron.hpp  colored_polyhedron.cpp  colored_polyhedron.hpp  colored_vector_dictionary.cpp  colored_vector_dictionary.hpp  geometry.hpp  main.cpp  octet.cpp  octet.hpp  piece.cpp  piece.hpp  polyhedron.cpp  polyhedron.hpp  vector_key.hpp
